[package]
name = "blefyi"
version = "0.1.0"
edition = "2021"
authors = ["FYIPedia"]
description = "Bluetooth Low Energy chip reference, GATT profile lookup, and beacon encyclopedia -- async API client for blefyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/blefyi-rs"
homepage = "https://blefyi.com"
documentation = "https://docs.rs/blefyi"
readme = "README.md"
keywords = ["ble", "bluetooth", "beacon", "gatt", "api-client"]
categories = ["api-bindings", "data-structures"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
